@@ -4,17 +4,18 @@
 gmtconvert \- Convert, Paste, and/or Extract columns from data tables
 .SH SYNOPSIS
 BD(gmtconvert) [ IT(table) ] [ OPT(A) ] [ OPT(D)[IT(template)] ] [ OPT(E)[BD(f)|BD(l)] ] 
-[ OPT(L) ] [ OPT(I) ] [ OPT(N) ] [ OPT(Q)IT(seg) ] 
+[ OPT(L) ] [ OPT(I)[BD(tsr)] ] [ OPT(N) ] [ OPT(Q)IT(seg) ] 
 [ OPT(S)[BD(~)]IT("search string") ] [ OPT(T) ] [ GMT_V_OPT ] [ GMT_a_OPT ] [ GMT_b_OPT ] 
 [ GMT_f_OPT ] [ GMT_g_OPT ] [ GMT_h_OPT ] [ GMT_i_OPT ] [ GMT_o_OPT ] [ GMT_s_OPT ] [ GMT_colon_OPT ]
 .SH DESCRIPTION
 BD(gmtconvert) reads its standard input [or input files] and writes out
 the desired information to standard output.  It can do a combination of
-six tasks: (1) convert between binary and ASCII data tables, (2) paste
+seven tasks: (1) convert between binary and ASCII data tables, (2) paste
 corresponding records from multiple files horizontally into a single file, (3)
 extract a subset of the available columns, (4) only extract segments whose header
 record matches a text pattern search, (5) only list segment headers and no data
-records, and (6) extract first and/or last data record for each segment.
+records, (6) extract first and/or last data record for each segment, and (7)
+reverse the order of items on output.
 Input (and hence output) may have multiple sub-headers,
 and ASCII tables may have regular headers as well.
 #include "explain_commonitems.txt"
@@ -45,8 +46,10 @@ all records].  Optionally, append BD(f) or BD(l) to only extract the first or la
 record of each segment, respectively.
 .TP
 OPT(I)
-Invert the order of rows, i.e., output the final records in reverse order, starting with the last and ending
-up with the first input row, per segment [Default keeps original order].
+Invert the order of items, i.e., output the items in reverse order, starting with the last and ending
+up with the first item [Default keeps original order].  Append up to three items that should be reversed:
+BD(t) will reverse the order of tables, BD(s) will reverse the order of segments within each table,
+and BD(r) will reverse the order of records within each segment [Default].
 .TP
 OPT(L)
 Only output a listing of all segment header records and no data records (requires ASCII data).
@@ -119,6 +122,11 @@ To extract all segments in the file big_file.d whose headers contain the string 
 .sp
 gmtconvert big_file.d -S"RIDGE AXIS" > subset.d
 .br
+.sp
+To reverse the order of segments in a file without reversing the order of records within each segment, try
+.br
+.sp
+gmtconvert lots of segments.txt -Is > last_segment_first.txt
 .SH "SEE ALSO"
 .IR gmt (1),
 .IR minmax (1)
